# CepGenProcessExample

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test_framework.yml
cards/: dummy_collfactor_cfg.py  dummy_ktfactor_cfg.py
cmake/: FindCepGen.cmake
src/: DummyProcess.cpp
